--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@ionic/vue-router": "^7.0.0",
     "axios": "^1.6.2",
     "ionicons": "^7.0.0",
+    "jwt-decode": "^4.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
